--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
 </head>
 
 <body>
+   <header class="header">
+    <a href="#" class="logo">[root@localhost ~]# whoami</a>
+
+    <input type="checkbox" id="check" />
+    <label for="check" class="icons">
+      <i class="bx bx-menu" id="menu-icon"></i>
+      <i class="bx bx-x" id="close-icon"></i>
+    </label>
+    <div class="gradient-bg">
+      <nav class="navbar">
+        <a href="#" class="nav-item" style="--i: 0">Home</a>
+        <a href="#" class="nav-item" style="--i: 1">Skills</a>
+        <a href="#" class="nav-item" style="--i: 2">Projects</a>
+        <a href="#" class="nav-item" style="--i: 3">Contact</a>
+
+      </nav>
+    </div>
+  </header>
+  </header>
   <div class="wrapper">
     <div class="cover cover-left"></div>
     <div class="cover cover-right"></div>
