--- a/index.html
+++ b/index.html
@@ -16,18 +16,28 @@
 </head>
 
 <body>
-   <header class="header">
-    <a href="#" class="logo">[root@localhost ~]# whoami</a>
-    <div class="gradient-bg">
-      <nav class="navbar">
-        <a href="#" class="nav-item" style="--i: 0">Home</a>
-        <a href="#" class="nav-item" style="--i: 1">Skills</a>
-        <a href="#" class="nav-item" style="--i: 2">Projects</a>
-        <a href="#" class="nav-item" style="--i: 3">Contact</a>
+   <header>
+  <div class="header">
+    <div class="container">
+      <div class="row">
+        <nav class="navbar navbar-expand-lg bg-light col mt-4 custom-navbar">
+          <div class="container-fluid">
+            <button class="navbar-toggler mx-auto pt-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <a class="nav-link custom-nav-link" href="index.html">Home</a>
+              <a class="nav-link custom-nav-link" href="about.html">About</a>
+              <a class="nav-link custom-nav-link" href="portfolio.html">Portfolio</a>
+              <a class="nav-link custom-nav-link" href="contact.html">Contact</a>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div> 
+  </div>
+</header>
 
-      </nav>
-    </div>
-  </header>
   <div class="wrapper">
     <div class="cover cover-left"></div>
     <div class="cover cover-right"></div>
