--- a/index.html
+++ b/index.html
@@ -169,11 +169,9 @@
     </div>
   </div>
   <script src="./js/script.js"></script>
-</body>
-
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+ <div class="side-content">
+    <p>Press the Next Button present at the bottom of each page to navigate through my Resume Portfolio. 
+      THANK YOU FOR VISITING!</p>
+</div>
 </body>
 </html>
