--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <a class="nav-link custom-nav-link" href="index.html">Home</a>
-              <a class="nav-link custom-nav-link" href="about.html">About</a>
-              <a class="nav-link custom-nav-link" href="portfolio.html">Portfolio</a>
-              <a class="nav-link custom-nav-link" href="contact.html">Contact</a>
+              <a class="nav-link custom-nav-link" href="#">Home</a>
+              <a class="nav-link custom-nav-link" href="#">About</a>
+              <a class="nav-link custom-nav-link" href="#">Portfolio</a>
+              <a class="nav-link custom-nav-link" href="#">Contact</a>
             </div>
           </div>
         </nav>
