--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <a class="nav-link custom-nav-link" href="#">Home</a>
+              <a class="nav-link custom-nav-link" href="https://unknownsentinel193.github.io/portfolio/">Home</a>
               <a class="nav-link custom-nav-link" href="#">About</a>
               <a class="nav-link custom-nav-link" href="#">Portfolio</a>
               <a class="nav-link custom-nav-link" href="#">Contact</a>
